// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnDemand Radio Page  should match snapshot for AMP 1`] = `
<html
  amp=""
  dir="rtl"
  lang="ps"
>
  <head>
    <title>
      ماښامنۍ خپرونه - BBC News پښتو
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="ps"
      rel="alternate"
    />
    <link
      href="http://localhost:7080/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News پښتو"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News پښتو"
      name="application-name"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      property="og:image"
    />
    <meta
      content="BBC News پښتو"
      property="og:image:alt"
    />
    <meta
      content="ps"
      property="og:locale"
    />
    <meta
      content="BBC News پښتو"
      property="og:site_name"
    />
    <meta
      content="ماښامنۍ خپرونه - BBC News پښتو"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcpashto"
      name="twitter:creator"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      name="twitter:description"
    />
    <meta
      content="BBC News پښتو"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcpashto"
      name="twitter:site"
    />
    <meta
      content="ماښامنۍ خپرونه - BBC News پښتو"
      name="twitter:title"
    />
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@graph":[{"@type":"WebPage","url":"https://www.test.bbc.com/pathname","publisher":{"@type":"NewsMediaOrganization","name":"BBC News پښتو","publishingPrinciples":"https://www.bbc.com/pashto/institutional-49283007","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"}},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png","image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pathname","name":"ماښامنۍ خپرونه"},"inLanguage":{"@type":"Language","name":"Pashto","alternateName":"ps"}},{"@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p08b23c8.png","duration":"PT29M30S","uploadDate":"2020-05-01T00:00:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps/amp?morph_env=live"}]}
    </script>
  </head>
  <body>
    <div>
      <amp-analytics>
        <script
          type="application/json"
        >
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=68&p=pashto.bbc_pashto_radio.w3ct0lz1.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Apips%3Aw3ct0lz1]&x2=[amp]&x3=[news-pashto]&x4=[ps]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[%D9%85%D8%A7%DA%9A%D8%A7%D9%85%D9%86%DB%8D%2B%D8%AE%D9%BE%D8%B1%D9%88%D9%86%D9%87%2B-%2BBBC%2BNews%2B%D9%BE%DA%9A%D8%AA%D9%88]&ref=\${documentReferrer}"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <div>
        chartbeat
      </div>
      <amp-analytics
        type="comscore"
      >
        <script
          type="application/json"
        >
          {"vars":{"c2":"17986528"},"extraUrlParams":{"comscorekw":"amp"}}
        </script>
      </amp-analytics>
      <main
        class="emotion-16 css-py1rac-GridComponent-GelPageGrid emotion-6"
        dir="rtl"
        role="main"
      >
        <div
          class="css-50e7ja-GridComponent emotion-6"
          dir="rtl"
        >
          <div
            class="emotion-10 css-113v68j-GridComponent-GelPageGrid-StyledGelWrapperGrid emotion-6"
            dir="ltr"
          >
            <div
              class="css-1yhoh9r-GridComponent emotion-6"
              dir="rtl"
            >
              <h1
                class=" emotion-3 css-jegqo1-Headline-StyledRadioHeadingContainer emotion-4"
                id="content"
                tabindex="-1"
              >
                <span
                  role="text"
                >
                  <span
                    class="css-kq5d5e-BrandTitle emotion-0"
                  >
                    ماښامنۍ خپرونه
                  </span>
                  <span
                    class="css-ow3j0s-VisuallyHiddenText emotion-1"
                  >
                    , 
                  </span>
                  <span
                    class="css-17g9u3u-Datestamp emotion-2"
                  >
                    ۱ می ۲۰۲۰
                  </span>
                </span>
              </h1>
              <p
                class="css-1n3vn6m-Paragraph-StyledParagraphComponent emotion-5"
              >
                د بي بي سي ورلډ سروس څخه پروګرام کول
              </p>
            </div>
            <div
              class="css-12inoag-GridComponent emotion-6"
              dir="rtl"
            >
              <div
                class="css-162u60m-ImageContainer emotion-8"
                data-e2e="on-demand-image"
                dir="ltr"
              >
                <div
                  class="css-1cgeruu-ImagePlaceholder emotion-7"
                >
                  <amp-img
                    alt="BBC News پښتو"
                    attribution=""
                    height="240"
                    layout="responsive"
                    src="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png"
                    srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b23c8.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b23c8.png 480w"
                    width="240"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-13 css-14t66qe-Wrapper-AudioPlayer emotion-14"
          >
            <div
              class="css-1bxiiiz-StyledAudioContainer emotion-12"
            >
              <amp-iframe
                allowfullscreen="allowfullscreen"
                frameborder="0"
                layout="fill"
                sandbox="allow-scripts allow-same-origin"
                scrolling="no"
                src="https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps/amp?morph_env=live"
                title="اډیو پلیئر"
              >
                <amp-img
                  alt=""
                  attribution=""
                  height="16"
                  layout="fill"
                  placeholder="true"
                  src="http://localhost:7080/images/amp_audio_placeholder.png"
                  width="9"
                />
                <noscript />
              </amp-iframe>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`OnDemand Radio Page  should match snapshot for Canonical 1`] = `
<html
  dir="rtl"
  lang="ps"
>
  <head>
    <title>
      ماښامنۍ خپرونه - BBC News پښتو
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="ps"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.com/pathname.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News پښتو"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News پښتو"
      name="application-name"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      property="og:image"
    />
    <meta
      content="BBC News پښتو"
      property="og:image:alt"
    />
    <meta
      content="ps"
      property="og:locale"
    />
    <meta
      content="BBC News پښتو"
      property="og:site_name"
    />
    <meta
      content="ماښامنۍ خپرونه - BBC News پښتو"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcpashto"
      name="twitter:creator"
    />
    <meta
      content="د بي بي سي ورلډ سروس څخه پروګرام کول"
      name="twitter:description"
    />
    <meta
      content="BBC News پښتو"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcpashto"
      name="twitter:site"
    />
    <meta
      content="ماښامنۍ خپرونه - BBC News پښتو"
      name="twitter:title"
    />
    <noscript>
      &lt;img src="https://sb.scorecardresearch.com/p?c1=2&c2=17986528&cv=2.0&cj=1" /&gt;
    </noscript>
    <script
      async="true"
      src="http://localhost:7080/static/js/comscore/main-1.0.js"
      type="text/javascript"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@graph":[{"@type":"WebPage","url":"https://www.test.bbc.com/pathname","publisher":{"@type":"NewsMediaOrganization","name":"BBC News پښتو","publishingPrinciples":"https://www.bbc.com/pashto/institutional-49283007","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"}},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png","image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pathname","name":"ماښامنۍ خپرونه"},"inLanguage":{"@type":"Language","name":"Pashto","alternateName":"ps"}},{"@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p08b23c8.png","duration":"PT29M30S","uploadDate":"2020-05-01T00:00:00.000Z","embedURL":"https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps?morph_env=live"}]}
    </script>
  </head>
  <body>
    <div>
      <noscript />
      <div>
        chartbeat
      </div>
      <main
        class="emotion-18 css-py1rac-GridComponent-GelPageGrid emotion-6"
        dir="rtl"
        role="main"
      >
        <div
          class="css-50e7ja-GridComponent emotion-6"
          dir="rtl"
        >
          <div
            class="emotion-11 css-113v68j-GridComponent-GelPageGrid-StyledGelWrapperGrid emotion-6"
            dir="ltr"
          >
            <div
              class="css-1yhoh9r-GridComponent emotion-6"
              dir="rtl"
            >
              <h1
                class=" emotion-3 css-jegqo1-Headline-StyledRadioHeadingContainer emotion-4"
                id="content"
                tabindex="-1"
              >
                <span
                  role="text"
                >
                  <span
                    class="css-kq5d5e-BrandTitle emotion-0"
                  >
                    ماښامنۍ خپرونه
                  </span>
                  <span
                    class="css-ow3j0s-VisuallyHiddenText emotion-1"
                  >
                    , 
                  </span>
                  <span
                    class="css-17g9u3u-Datestamp emotion-2"
                  >
                    ۱ می ۲۰۲۰
                  </span>
                </span>
              </h1>
              <p
                class="css-1n3vn6m-Paragraph-StyledParagraphComponent emotion-5"
              >
                د بي بي سي ورلډ سروس څخه پروګرام کول
              </p>
            </div>
            <div
              class="css-12inoag-GridComponent emotion-6"
              dir="rtl"
            >
              <div
                class="css-162u60m-ImageContainer emotion-9"
                data-e2e="on-demand-image"
                dir="ltr"
              >
                <div
                  class="css-1cgeruu-ImagePlaceholder emotion-8"
                >
                  <img
                    alt="BBC News پښتو"
                    class="css-13lcmnl-StyledImg emotion-7"
                    sizes="(min-width: 1008px) 228px, 30vw"
                    src="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png"
                    srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b23c8.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b23c8.png 480w"
                    width="240"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-15 css-14t66qe-Wrapper-AudioPlayer emotion-16"
          >
            <div
              class="css-1bxiiiz-StyledAudioContainer emotion-14"
            >
              <iframe
                allow="autoplay"
                allowfullscreen=""
                class="css-v3kkbc-StyledIframe emotion-13"
                scrolling="no"
                src="https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps?morph_env=live"
                title="اډیو پلیئر"
              />
              <noscript />
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`OnDemand Radio Page  should show the 'content not yet available' message if episode is not yet available 1`] = `
@media (max-width:14.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-32 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-32 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-32 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-32 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-32 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-7 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    padding: 2.5rem 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    padding: 2rem 0 1rem;
  }
}

.emotion-4 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 2.25rem;
  }
}

.emotion-9 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-9 {
    padding-bottom: 0.5rem;
  }
}

.emotion-30 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.emotion-28 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-26 {
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-26 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-26 {
    background-color: transparent;
  }
}

.emotion-24 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-24 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-24 {
    padding: 1rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-34 emotion-35 emotion-12"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-32 emotion-12"
      dir="ltr"
    >
      <div
        class="emotion-21 emotion-22 emotion-12"
        dir="rtl"
      >
        <div
          class="emotion-11 emotion-12"
          dir="ltr"
        >
          <h1
            class=" emotion-6 emotion-7 emotion-8"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                BBC 코리아 라디오
              </span>
              <span
                class="emotion-2 emotion-3"
              >
                , 
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                2020년 5월 4일
              </span>
            </span>
          </h1>
          <p
            class="emotion-9 emotion-10"
          >
            한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
          </p>
        </div>
        <div
          class="emotion-19 emotion-12"
          dir="ltr"
        >
          <div
            class="emotion-17 emotion-18"
            data-e2e="on-demand-image"
            dir="ltr"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="BBC News 코리아"
                class="emotion-13 emotion-14"
                sizes="(min-width: 1008px) 228px, 30vw"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b8lzc.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b8lzc.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-28 emotion-29"
        >
          <div
            class="emotion-26 emotion-27"
          >
            <strong
              class="emotion-24 emotion-25"
            >
              아직 재생할 수 없는 프로그램입니다.
            </strong>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`OnDemand Radio Page  should show the expired content message if episode is expired 1`] = `
@media (max-width:14.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-32 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-32 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-32 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-32 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-32 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-7 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    padding: 2.5rem 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-7 {
    padding: 2rem 0 1rem;
  }
}

.emotion-4 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 2.25rem;
  }
}

.emotion-9 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-9 {
    padding-bottom: 0.5rem;
  }
}

.emotion-30 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.emotion-28 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-26 {
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-26 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-26 {
    background-color: transparent;
  }
}

.emotion-24 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-24 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-24 {
    padding: 1rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-34 emotion-35 emotion-12"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-32 emotion-12"
      dir="ltr"
    >
      <div
        class="emotion-21 emotion-22 emotion-12"
        dir="rtl"
      >
        <div
          class="emotion-11 emotion-12"
          dir="ltr"
        >
          <h1
            class=" emotion-6 emotion-7 emotion-8"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                BBC 코리아 라디오
              </span>
              <span
                class="emotion-2 emotion-3"
              >
                , 
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                2020년 5월 4일
              </span>
            </span>
          </h1>
          <p
            class="emotion-9 emotion-10"
          >
            한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
          </p>
        </div>
        <div
          class="emotion-19 emotion-12"
          dir="ltr"
        >
          <div
            class="emotion-17 emotion-18"
            data-e2e="on-demand-image"
            dir="ltr"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="BBC News 코리아"
                class="emotion-13 emotion-14"
                sizes="(min-width: 1008px) 228px, 30vw"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b8lzc.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b8lzc.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-28 emotion-29"
        >
          <div
            class="emotion-26 emotion-27"
          >
            <strong
              class="emotion-24 emotion-25"
            >
              더 이상 이용할 수 없는 콘텐츠입니다.
            </strong>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
